wui inline main logo

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -501,7 +501,7 @@
                     <a id="sidenav-toggle" href="#!" class="sidenav-toggle"><i class="material-icons">menu</i></a>
                 </div>
                 <a href="/courses" class="logo">
-                    <img class="img" src="/static/img/inline-icons/optimised/main-logo-op.svg" alt="Lahendus"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11 0l6 4.8V0zm6 4.8V7 4.8zM7 0v10.1h10V7L8.4 0zm6.9 13.9h10V24H14zM0 13.9h10.1V24H.1z"/></svg>
                     <span class="text">LAHENDUS</span>
                 </a>
             </div>
