wui change exercise lib url /exercises -> /exerciselib

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -68,7 +68,7 @@
         <li><div class="divider"></div></li>
         <li><a class="waves-effect sidenav-close" href="/courses"><i class="material-icons">storage</i>{{myCoursesLabel}}</a></li>
         {{#isTeacherOrAdmin}}
-<!--            <li><a class="waves-effect sidenav-close" href="/exercises"><i class="material-icons">folder</i>{{exerciseLibLabel}}</a></li>-->
+<!--            <li><a class="waves-effect sidenav-close" href="/exerciselib"><i class="material-icons">folder</i>{{exerciseLibLabel}}</a></li>-->
         {{/isTeacherOrAdmin}}
         {{#isAdmin}}
 <!--            <li><a class="waves-effect sidenav-close" href="/articles"><i class="material-icons">assignment_ind</i>{{articlesLabel}}</a></li>-->
