EZ-1222 ezcoll poc improve checkbox/icon/text style, add attr separator

--- a/wui/static/ezcollcustom.html
+++ b/wui/static/ezcollcustom.html
@@ -120,7 +120,7 @@
             display: flex;
             align-items: start;
             justify-content: center;
-            padding: .7rem 1rem .1rem .8rem;
+            padding: .6rem 1rem .1rem .8rem;
         }
 
         .ez-coll-sizer[min-width~="400px"] ezc-left {
@@ -132,27 +132,41 @@
             padding-right: 1.7rem;
         }
 
-        ezc-left:hover ez-icon,
-        ez-coll[selection-active] ezc-left ez-icon {
+        ezc-item-type {
+            display: flex;
+            justify-content: center;
+            width: 3rem;
+        }
+
+        ezc-item-type-text {
+            color: var(--ezc-attr-immutable-col);
+            font-size: .9em;
+        }
+
+        ezc-left:hover ezc-item-type,
+        ez-coll[selection-active] ezc-left ezc-item-type {
             display: none;
         }
+
+        /* TODO: allow clicking/checking checkbox when hovering is not possible. */
         ezc-left:hover .ezc-item-checkbox,
         ez-coll[selection-active] ezc-left .ezc-item-checkbox {
             display: block;
         }
 
-        ezc-left > ez-icon > svg {
+        ezc-left ez-icon > svg {
             width: 2rem;
             height: 2rem;
         }
 
         ezc-item.two-rows ezc-left {
-            padding-top: 1.8rem;
+            padding-top: 1.7rem;
         }
 
         ezc-left .ezc-item-checkbox {
             display: none;
-            width: 2rem;
+            width: 3rem;
+            padding: .1rem 0 0 .5rem;
         }
         ezc-left .ezc-item-checkbox span.dummy {
             padding-left: 0;
@@ -233,7 +247,7 @@
 
         ezc-attr,
         ezc-fold-attr {
-            font-size: 1.4rem;
+            font-size: .86em;
         }
 
         ezc-attr.top {
@@ -243,9 +257,10 @@
         ezc-attr.bottom {
         }
 
-        /* Padding-left because padding-right allows overflow on it */
         ezc-attr.bottom:not(:first-child) {
+            /* Padding-left because padding-right allows overflow on it */
             padding-left: 1rem;
+            border-left: 1px solid rgba(0, 0, 0, .15);
         }
 
         /* Fade out long attr values - do we want this? */
@@ -255,14 +270,12 @@
             top: 0;
             right: 0;
             height: 100%;
-            width: 1rem;
+            width: 1.3rem;
             background: linear-gradient(to right, rgba(255, 255, 255, 0), #fff);
             pointer-events: none;
         }
 
         ezc-attr-text {
-        }
-        ezc-attr-text.immutable {
             color: var(--ezc-attr-immutable-col);
         }
         ezc-attr-text.mutable {
@@ -429,13 +442,16 @@
 
         <!-- ezcoll -->
         <div class="ez-coll-sizer">
-            <ez-coll selection-activee>
+            <ez-coll selectable selection-activee>
                 <ezc-item ez-item="1" class="two-rows">
                     <ezc-item-container>
                         <ezc-left>
+                            <ezc-item-type>
+<!--                                <ezc-item-type-text>4</ezc-item-type-text>-->
                             <ez-icon class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.96.24a2.8 2.8 0 00-2.76 2.8 2.8 2.8 0 001.44 2.45v2.9H5.2a3.17 3.17 0 00-3.27 3.1v9.28a3.17 3.17 0 003.27 3.09h13.6a3.17 3.17 0 003.27-3.1v-9.28A3.17 3.17 0 0018.8 8.4h-5.44V5.5a2.8 2.8 0 001.44-2.45A2.8 2.8 0 0012 .24a2.8 2.8 0 00-.04 0zM7.24 11.98a2.8 2.8 0 01.08 0 2.8 2.8 0 011.09.25 2.8 2.8 0 011.43 3.6l-.22.44a2.8 2.8 0 01-3.75.96 2.8 2.8 0 01-1.12-3.72 2.8 2.8 0 012.5-1.53zm9.57 0a2.8 2.8 0 01.03 0 2.8 2.8 0 011.09.26 2.8 2.8 0 011.38 3.7l-.02.05a2.8 2.8 0 01-3.72 1.33 2.8 2.8 0 01-1.35-3.72 2.8 2.8 0 012.6-1.62z"/></svg>
                             </ez-icon>
+                            </ezc-item-type>
                             <label class="ezc-item-checkbox">
                                 <input type="checkbox" class="filled-in" /><span class="dummy"></span>
                             </label>
@@ -446,16 +462,14 @@
                                 <ezc-first>
                                     <ezc-title><a href="#!">Pealkiri Pealkiri Pealkiri</a></ezc-title>
                                     <ezc-attr class="top" ez-show-min="600">
-                                        <ezc-attr-text class="immutable" title="Tähtaeg">
-                                            11.09.20, 11:11
-                                        </ezc-attr-text>
+                                        <ezc-attr-text class="" title="Tähtaeg">11.09.20, 11:11</ezc-attr-text>
                                     </ezc-attr>
                                 </ezc-first>
                                 <ezc-second>
                                     <ezc-attrs-sizer>
                                         <ezc-bottom-attrs ez-attrs="3" ez-attr-width-s="200" ez-attr-width-m="300" ez-growing-attrss>
                                             <ezc-attr class="bottom" style="">
-                                                <ezc-attr-text class="immutable" title="Attr1 key">
+                                                <ezc-attr-text class="" title="Attr1 key">
                                                     attr1 attr1 attr1 attr1 attr1 attr1 attr1 attr1 attr1 attr1
                                                 </ezc-attr-text>
                                             </ezc-attr>
@@ -465,7 +479,7 @@
                                                 </ezc-attr-text>
                                             </ezc-attr>
                                             <ezc-attr class="bottom" style="">
-                                                <ezc-attr-text class="immutable" title="Attr3 key">
+                                                <ezc-attr-text class="" title="Attr3 key">
                                                     attr3
                                                 </ezc-attr-text>
                                             </ezc-attr>
@@ -476,7 +490,7 @@
                                         <ezc-fold-attr ez-show-max="599">
                                             <ezc-fold-key>Top attr key</ezc-fold-key>:
                                             <ezc-fold-value>
-                                                <ezc-attr-text class="immutable" title="Top attr key">
+                                                <ezc-attr-text class="" title="Top attr key">
                                                     Paremal
                                                 </ezc-attr-text>
                                             </ezc-fold-value>
@@ -484,7 +498,7 @@
                                         <ezc-fold-attr>
                                             <ezc-fold-key>Attr 1 key</ezc-fold-key>:
                                             <ezc-fold-value>
-                                                <ezc-attr-text class="immutable" title="Attr1 key">
+                                                <ezc-attr-text class="" title="Attr1 key">
                                                     attr1 attr1 attr1 attr1 attr1 attr1 attr1 attr1 attr1 attr1
                                                 </ezc-attr-text>
                                             </ezc-fold-value>
@@ -500,7 +514,7 @@
                                         <ezc-fold-attr>
                                             <ezc-fold-key>Attr 3 key</ezc-fold-key>:
                                             <ezc-fold-value>
-                                                <ezc-attr-text class="immutable" title="Attr3 key">
+                                                <ezc-attr-text class="" title="Attr3 key">
                                                     attr3
                                                 </ezc-attr-text>
                                             </ezc-fold-value>
@@ -509,11 +523,6 @@
 
                                     <ezc-bottom-space>
                                         <ez-icon-action ez-show-min="600" title="Peida" class="waves-effect" tabindex="0">
-                                            <ez-icon>
-                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/></svg>
-                                            </ez-icon>
-                                        </ez-icon-action>
-                                        <ez-icon-action title="Peida" class="waves-effect" tabindex="0">
                                             <ez-icon>
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/></svg>
                                             </ez-icon>
@@ -547,9 +556,12 @@
                 <ezc-item ez-item="2" class="">
                     <ezc-item-container>
                         <ezc-left>
-                            <ez-icon class="">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.96.24a2.8 2.8 0 00-2.76 2.8 2.8 2.8 0 001.44 2.45v2.9H5.2a3.17 3.17 0 00-3.27 3.1v9.28a3.17 3.17 0 003.27 3.09h13.6a3.17 3.17 0 003.27-3.1v-9.28A3.17 3.17 0 0018.8 8.4h-5.44V5.5a2.8 2.8 0 001.44-2.45A2.8 2.8 0 0012 .24a2.8 2.8 0 00-.04 0zM7.24 11.98a2.8 2.8 0 01.08 0 2.8 2.8 0 011.09.25 2.8 2.8 0 011.43 3.6l-.22.44a2.8 2.8 0 01-3.75.96 2.8 2.8 0 01-1.12-3.72 2.8 2.8 0 012.5-1.53zm9.57 0a2.8 2.8 0 01.03 0 2.8 2.8 0 011.09.26 2.8 2.8 0 011.38 3.7l-.02.05a2.8 2.8 0 01-3.72 1.33 2.8 2.8 0 01-1.35-3.72 2.8 2.8 0 012.6-1.62z"/></svg>
-                            </ez-icon>
+                            <ezc-item-type>
+<!--                                <ezc-item-type-text>888</ezc-item-type-text>-->
+                                                            <ez-icon class="">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.96.24a2.8 2.8 0 00-2.76 2.8 2.8 2.8 0 001.44 2.45v2.9H5.2a3.17 3.17 0 00-3.27 3.1v9.28a3.17 3.17 0 003.27 3.09h13.6a3.17 3.17 0 003.27-3.1v-9.28A3.17 3.17 0 0018.8 8.4h-5.44V5.5a2.8 2.8 0 001.44-2.45A2.8 2.8 0 0012 .24a2.8 2.8 0 00-.04 0zM7.24 11.98a2.8 2.8 0 01.08 0 2.8 2.8 0 011.09.25 2.8 2.8 0 011.43 3.6l-.22.44a2.8 2.8 0 01-3.75.96 2.8 2.8 0 01-1.12-3.72 2.8 2.8 0 012.5-1.53zm9.57 0a2.8 2.8 0 01.03 0 2.8 2.8 0 011.09.26 2.8 2.8 0 011.38 3.7l-.02.05a2.8 2.8 0 01-3.72 1.33 2.8 2.8 0 01-1.35-3.72 2.8 2.8 0 012.6-1.62z"/></svg>
+                                                            </ez-icon>
+                            </ezc-item-type>
                             <label class="ezc-item-checkbox">
                                 <input type="checkbox" class="filled-in" /><span class="dummy"></span>
                             </label>
@@ -560,7 +572,7 @@
                                 <ezc-first>
                                     <ezc-title><a href="#!">Pealkiri Pealkiri Pealkiri</a></ezc-title>
                                     <ezc-attr class="top" ez-show-min="600">
-                                        <ezc-attr-text class="immutable" title="Top attr key">
+                                        <ezc-attr-text class="" title="Top attr key">
                                             Paremal
                                         </ezc-attr-text>
                                     </ezc-attr>
@@ -590,10 +602,6 @@
 
         * Adjust all sizing rules for max-attrs: 6 and some reasonable options for attr widths
         * Add VLJ to second item
-        * To be decided: when item is unfolded, should the logo and menu btn stay at the top (possibly moving to
-          align with only the first row) or move to the center of the item?
-          Related: if item has an unempty bottom action space then there's an empty space between the first row and fold.
-          If we want to fix that (move fold inside the attr row) then that's doable only if the logo/menu move to center.
         -->
     </div>
 </main>
