--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -187,7 +187,7 @@
         <ezc-item-container>
             <ezc-left>
                 <ezc-item-type>
-                    {{#isTypeIcon}}<ez-icon>{{{typeHtml}}}</ez-icon>{{/isTypeIcon}}
+                    {{#isTypeIcon}}{{{typeHtml}}}{{/isTypeIcon}}
                     {{^isTypeIcon}}<ezc-item-type-text>{{{typeHtml}}}</ezc-item-type-text>{{/isTypeIcon}}
                 </ezc-item-type>
                 <label class="ezc-item-checkbox">
@@ -220,7 +220,7 @@
                             <ezc-fold class="display-none">
                                 {{#topAttr}}
                                     <ezc-fold-attr ez-show-max="{{maxCollWidthInFold}}">
-                                        <ezc-fold-key>{{key}}</ezc-fold-key>:
+                                        <ezc-fold-key>{{key}}:</ezc-fold-key>
                                         <ezc-fold-value>
                                             <ezc-attr-text class="{{#isMutable}}mutable{{/isMutable}}">
                                                 {{value}}
@@ -230,7 +230,7 @@
                                 {{/topAttr}}
                                 {{#bottomAttrs}}
                                     <ezc-fold-attr>
-                                        <ezc-fold-key>{{key}}</ezc-fold-key>:
+                                        <ezc-fold-key>{{key}}:</ezc-fold-key>
                                         <ezc-fold-value>
                                             <ezc-attr-text class="{{#isMutable}}mutable{{/isMutable}}">
                                                 {{value}}
@@ -242,9 +242,7 @@
                             {{#hasActions}}
                                 <ezc-bottom-space>
                                     {{#actions}}{{#iconHtml}}
-                                        <ez-icon-action ez-show-min="{{minCollWidth}}" title="{{text}}" class="waves-effect" tabindex="0">
-                                            <ez-icon>{{{iconHtml}}}</ez-icon>
-                                        </ez-icon-action>
+                                        <ez-icon-action ez-action="{{id}}" ez-show-min="{{minCollWidth}}" title="{{text}}" class="waves-effect" tabindex="0">{{{iconHtml}}}</ez-icon-action>
                                     {{/iconHtml}}{{/actions}}
                                 </ezc-bottom-space>
                             {{/hasActions}}
@@ -265,7 +263,7 @@
         {{#hasBottomAttrs}}
             <ezc-trailer>
                 <ezc-expand-trailer>
-                    <ez-icon-action ez-expand-item="{{idx}}" title="{{expandItemTitle}}" class="waves-effect" tabindex="0">
+                    <ez-icon-action ez-expand-item title="{{expandItemTitle}}" class="waves-effect" tabindex="0">
                         <ez-icon>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg>
                         </ez-icon>
