--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -1235,7 +1235,8 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="https://idp.lahendus.ut.ee/auth/js/keycloak.js"></script>
+<!--<script src="https://idp.lahendus.ut.ee/auth/js/keycloak.js"></script>-->
+<script src="/static/js/keycloak.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/mode/python/python.min.js"></script>
