--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -173,17 +173,78 @@
 </script>
 
 <script id="t-c-ezcoll" type="text/x-handlebars">
-    <div class="ez-coll-sizer">
-        <ez-coll {{#isSelectable}}selectable{{/isSelectable}}>
+    <div id="{{collId}}" class="ez-coll-sizer">
+        <ezc-ctrl>
+            <ezc-ctrl-left>
+                {{#hasSelection}}
+                <label class="ezc-all-checkbox">
+                    <input id="ezc-select-all-{{collId}}" type="checkbox" class="filled-in" /><span class="dummy"></span>
+                </label>
+                <a class="btn-flat dropdown-trigger waves-effect disabled" data-target='ezc-select-action-dropdown-{{collId}}'>{{applyLabel}}
+                    <ez-icon><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M7 10l5 5 5-5z"/></svg></ez-icon>
+                </a>
+                <ezc-ctrl-selected></ezc-ctrl-selected>
+                {{/hasSelection}}
+            </ezc-ctrl-left>
+            <ezc-ctrl-right>
+                <ezc-ctrl-shown></ezc-ctrl-shown>
+                {{#hasFiltering}}
+                <ezc-ctrl-filter filter="off">
+                    <ez-icon-action title="{{filterLabel}}" class="waves-effect" tabindex="0">
+                        <ez-icon class="filter-disabled-icon"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><g><path d="M0,0h24 M24,24H0" fill="none"/><path d="M7,6h10l-5.01,6.3L7,6z M4.25,5.61C6.27,8.2,10,13,10,13v6c0,0.55,0.45,1,1,1h2c0.55,0,1-0.45,1-1v-6 c0,0,3.72-4.8,5.74-7.39C20.25,4.95,19.78,4,18.95,4H5.04C4.21,4,3.74,4.95,4.25,5.61z"/><path d="M0,0h24v24H0V0z" fill="none"/></g></svg></ez-icon>
+                        <ez-icon class="filter-enabled-icon"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="18px" viewBox="0 0 24 24" width="18px" fill="#000000"><g><path d="M0,0h24 M24,24H0" fill="none"/><path d="M4.25,5.61C6.27,8.2,10,13,10,13v6c0,0.55,0.45,1,1,1h2c0.55,0,1-0.45,1-1v-6c0,0,3.72-4.8,5.74-7.39 C20.25,4.95,19.78,4,18.95,4H5.04C4.21,4,3.74,4.95,4.25,5.61z"/><path d="M0,0h24v24H0V0z" fill="none"/></g></svg></ez-icon>
+                    </ez-icon-action>
+                    <div class="input-field select-wrap">
+                        <select multiple>
+                            <optgroup label="{{removeFiltersLabel}}"></optgroup>
+                            {{#filterGroups}}
+                                <optgroup label="{{groupLabel}}">
+                                    {{#filterOptions}}
+                                        <option value="{{value}}" {{#isSelected}}selected{{/isSelected}}>{{optionLabel}}</option>
+                                    {{/filterOptions}}
+                                </optgroup>
+                            {{/filterGroups}}
+                        </select>
+                        <label></label>
+                    </div>
+                </ezc-ctrl-filter>
+                {{/hasFiltering}}
+                {{#hasOrdering}}
+                <ezc-ctrl-order>
+                    <ez-icon-action title="{{orderLabel}}" class="dropdown-trigger waves-effect" data-target="ezc-sorting-dropdown-{{collId}}" tabindex="0">
+                        <ez-icon><svg xmlns="http://www.w3.org/2000/svg" height="18px" viewBox="0 0 24 24" width="18px" fill="#000000"><path d="M0 0h24v24H0V0zm0 0h24v24H0V0zm.75.75h22.5v22.5H.75z" fill="none"/><path d="M14.94 4.66h-4.72l2.36-2.36zm-4.69 14.71h4.66l-2.33 2.33zM6.1 6.27L1.6 17.73h1.84l.92-2.45h5.11l.92 2.45h1.84L7.74 6.27H6.1zm-1.13 7.37l1.94-5.18 1.94 5.18H4.97zm10.76 2.5h6.12v1.59h-8.53v-1.29l5.92-8.56h-5.88v-1.6h8.3v1.26l-5.93 8.6z"/></svg></ez-icon>
+                    </ez-icon-action>
+                </ezc-ctrl-order>
+                {{/hasOrdering}}
+            </ezc-ctrl-right>
+            <!-- Mass action menu structure -->
+            <ul id="ezc-select-action-dropdown-{{collId}}" class="dropdown-content">
+                {{#selectActions}}
+                    <li><span ez-mass-action="{{id}}" style="padding:0; height: 50px">{{{actionHtml}}}</span></li>
+                {{/selectActions}}
+            </ul>
+            <!-- Sorting menu structure -->
+            <ul id="ezc-sorting-dropdown-{{collId}}" class="dropdown-content">
+                {{#sorters}}
+                    <li>
+                        <label>
+                            <input ez-sorter="{{id}}" name="sorter" type="radio" />
+                            <span>{{label}}</span>
+                        </label>
+                    </li>
+                {{/sorters}}
+            </ul>
+        </ezc-ctrl>
+        <ez-coll>
             {{#items}}
-                <ez-dst id="{{dstId}}"></ez-dst>
+                <ez-dst id="{{dstId}}" style="order: {{idx}}"></ez-dst>
             {{/items}}
         </ez-coll>
     </div>
 </script>
 
 <script id="t-c-ezcoll-item" type="text/x-handlebars">
-    <ezc-item ez-item="{{idx}}" class="{{#hasBottomAttrs}}two-rows{{/hasBottomAttrs}}">
+    <ezc-item id="{{itemId}}" {{#isSelectable}}selectable{{/isSelectable}} class="{{#hasBottomAttrs}}two-rows{{/hasBottomAttrs}}">
         <ezc-item-container>
             <ezc-left>
                 <ezc-item-type>
@@ -191,16 +252,16 @@
                     {{^isTypeIcon}}<ezc-item-type-text>{{{typeHtml}}}</ezc-item-type-text>{{/isTypeIcon}}
                 </ezc-item-type>
                 <label class="ezc-item-checkbox">
-                    <input id="ezc-item-checkbox-{{idx}}" type="checkbox" class="filled-in" /><span class="dummy"></span>
+                    <input id="ezc-item-checkbox-{{itemId}}" type="checkbox" class="filled-in" /><span class="dummy"></span>
                 </label>
             </ezc-left>
             <ezc-main>
                 <ezc-center>
                     <ezc-first>
-                        <ezc-title><a {{#titleLink}}href="{{titleLink}}"{{/titleLink}}>{{title}}</a></ezc-title>
+                        <ezc-title {{#titleInactive}}class="inactive"{{/titleInactive}}><a {{#titleLink}}href="{{titleLink}}"{{/titleLink}}>{{title}}</a></ezc-title>
                         {{#topAttr}}
                             <ezc-attr class="top" ez-show-min="{{minCollWidth}}">
-                                <ezc-attr-text class="{{#isMutable}}mutable{{/isMutable}}" title="{{key}}: {{value}}">{{{shortValueHtml}}}</ezc-attr-text>
+                                <ezc-attr-text ez-attr-id="{{id}}" class="{{#isActionable}}actionable{{/isActionable}}" title="{{key}}: {{value}}">{{{shortValueHtml}}}</ezc-attr-text>
                             </ezc-attr>
                         {{/topAttr}}
                     </ezc-first>
@@ -210,7 +271,7 @@
                                 <ezc-bottom-attrs ez-attrs="{{bottomAttrCount}}" ez-attr-width-s="{{attrWidthS}}" ez-attr-width-m="{{attrWidthM}}" {{#hasGrowingAttrs}}ez-growing-attrs{{/hasGrowingAttrs}}>
                                     {{#bottomAttrs}}
                                         <ezc-attr class="bottom">
-                                            <ezc-attr-text class="{{#isMutable}}mutable{{/isMutable}}" title="{{key}}: {{value}}">
+                                            <ezc-attr-text ez-attr-id="{{id}}" class="{{#isActionable}}actionable{{/isActionable}}" title="{{key}}: {{value}}">
                                                 {{{shortValueHtml}}}
                                             </ezc-attr-text>
                                         </ezc-attr>
@@ -222,9 +283,7 @@
                                     <ezc-fold-attr ez-show-max="{{maxCollWidthInFold}}">
                                         <ezc-fold-key>{{key}}:</ezc-fold-key>
                                         <ezc-fold-value>
-                                            <ezc-attr-text class="{{#isMutable}}mutable{{/isMutable}}">
-                                                {{value}}
-                                            </ezc-attr-text>
+                                            <ezc-attr-text ez-attr-id="{{id}}" class="{{#isActionable}}actionable{{/isActionable}}">{{value}}</ezc-attr-text>
                                         </ezc-fold-value>
                                     </ezc-fold-attr>
                                 {{/topAttr}}
@@ -232,9 +291,7 @@
                                     <ezc-fold-attr>
                                         <ezc-fold-key>{{key}}:</ezc-fold-key>
                                         <ezc-fold-value>
-                                            <ezc-attr-text class="{{#isMutable}}mutable{{/isMutable}}">
-                                                {{value}}
-                                            </ezc-attr-text>
+                                            <ezc-attr-text ez-attr-id="{{id}}" class="{{#isActionable}}actionable{{/isActionable}}">{{value}}</ezc-attr-text>
                                         </ezc-fold-value>
                                     </ezc-fold-attr>
                                 {{/bottomAttrs}}
@@ -252,7 +309,7 @@
             </ezc-main>
             {{#hasActions}}
                 <ezc-right>
-                    <ez-icon-action id="ezc-item-action-menu-{{idx}}" title="{{actionMenuTitle}}" class="waves-effect dropdown-trigger" tabindex="0" data-target="ezc-item-action-dropdown-{{idx}}">
+                    <ez-icon-action id="ezc-item-action-menu-{{itemId}}" title="{{actionMenuTitle}}" class="waves-effect dropdown-trigger" tabindex="0" data-target="ezc-item-action-dropdown-{{itemId}}">
                         <ez-icon class="med">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/></svg>
                         </ez-icon>
@@ -272,7 +329,7 @@
             </ezc-trailer>
         {{/hasBottomAttrs}}
         <!-- Action menu structure -->
-        <ul id="ezc-item-action-dropdown-{{idx}}" class="dropdown-content">
+        <ul id="ezc-item-action-dropdown-{{itemId}}" class="dropdown-content">
             {{#actions}}
                 <li><span ez-action="{{id}}">{{{iconHtml}}}{{text}}</span></li>
             {{/actions}}
