EZ-1422 add loading text to splash

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -25,10 +25,8 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body style="background-color: #eee">
-<header>
-</header>
-<main>
-    <div class="loading-full-page">
+<div id="loading-splash-container">
+    <div id="loading-splash">
         <div class="loading-wrap">
             <div class="antennaball"></div>
             <div class="antenna"></div>
@@ -36,8 +34,13 @@
                 <div class="robot-eye"></div>
                 <div class="robot-eye"></div>
             </div>
+            <div class="text">Laadimine...</div>
         </div>
     </div>
+</div>
+<header>
+</header>
+<main>
 </main>
 <footer>
 </footer>
