EZ-1308 rm forced redirect to keycloak on load, add more specific loading messages to splash

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -34,7 +34,7 @@
                 <div class="robot-eye"></div>
                 <div class="robot-eye"></div>
             </div>
-            <div class="text">Laadimine...</div>
+            <div id="loading-splash-text">Laen rakendust</div>
         </div>
     </div>
 </div>
